# nexis

./: .env.example  .gitignore  README.md  RELEASING.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml  docs-pages.yml  release.yml
dashboard/control-api/: Dockerfile  package.json
dashboard/control-api/src/: app.ts  better_auth.ts  db.ts  index.ts
dashboard/ui/: Dockerfile  components.json  package.json  rsbuild.config.ts  tailwind.config.ts  tsconfig.json
dashboard/ui/src/: App.tsx  data.json  index.css  main.tsx  routes.ts  server.ts  types.ts
docs/: ARCHITECTURE.md  index.md
docs-site/: mdx-components.js  next.config.mjs  package.json  source.config.ts
docs-site/app/: layout.jsx
docs-site/app/[[...mdxPath]]/: page.jsx
docs-site/content/: _meta.js  index.mdx
docs-site/content/api-reference/: _meta.js  control-api.mdx  index.mdx  protocol.mdx  typescript-sdk.mdx
docs-site/content/docs/: index.mdx  meta.json
docs-site/content/getting-started/: _meta.js  authentication.mdx  connect-client.mdx  game-loop.mdx  index.mdx  quickstart.mdx  room-basics.mdx
docs-site/content/guides/: _meta.js  matchmaking.mdx  plugins.mdx  rpc-and-events.mdx  state-sync.mdx
docs-site/content/infrastructure/: _meta.js  index.mdx  observability.mdx  runtime-config.mdx  (+1 more)
docs-site/src/: mdx-components.tsx
examples/wasm-plugins/: README.md
examples/web-demo/: Dockerfile  package.json  tsconfig.json
infra/: smoke.ts
plugins/rust/nexis_wasm_plugin/: Cargo.toml  README.md
sdks/ts/: package.json
server/: Cargo.toml
(+66 files in other folders)
